--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.6
   loading_animation_widget: ^1.2.0+3
   carousel_slider: ^4.0.0
+  video_player: ^2.4.10
 
 
   # The following adds the Cupertino Icons font to your application.
